sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:10: error: ';' expected but '=' found.
      if (d > max) {(m,p)=(i,j)}
                         ^